@@ -20,7 +20,6 @@
 
 package password.pwm.svc.wordlist;
 
-import org.apache.commons.io.IOUtils;
 import password.pwm.AppProperty;
 import password.pwm.PwmApplication;
 import password.pwm.bean.SessionLabel;
@@ -30,19 +29,21 @@ import password.pwm.error.PwmUnrecoverableException;
 import password.pwm.http.ContextManager;
 import password.pwm.http.HttpHeader;
 import password.pwm.http.HttpMethod;
+import password.pwm.http.PwmURL;
 import password.pwm.svc.httpclient.PwmHttpClient;
 import password.pwm.svc.httpclient.PwmHttpClientConfiguration;
 import password.pwm.svc.httpclient.PwmHttpClientRequest;
 import password.pwm.svc.httpclient.PwmHttpClientResponse;
 import password.pwm.util.java.ConditionalTaskExecutor;
 import password.pwm.util.java.JavaHelper;
-import password.pwm.util.java.JsonUtil;
 import password.pwm.util.java.StringUtil;
 import password.pwm.util.java.TimeDuration;
+import password.pwm.util.json.JsonFactory;
 import password.pwm.util.logging.PwmLogger;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.time.Instant;
 import java.util.Collections;
@@ -96,26 +97,33 @@ class WordlistSource
         final String importUrl = wordlistConfiguration.getAutoImportUrl();
         return new WordlistSource( WordlistSourceType.AutoImport, importUrl, () ->
         {
-            if ( importUrl.startsWith( "http" ) )
+            final URI uri = URI.create( importUrl );
+
+            if ( PwmURL.uriSchemeMatches( uri, PwmURL.Scheme.http, PwmURL.Scheme.https ) )
             {
                 final boolean promiscuous = Boolean.parseBoolean( pwmApplication.getConfig().readAppProperty( AppProperty.HTTP_CLIENT_PROMISCUOUS_WORDLIST_ENABLE ) );
                 final PwmHttpClientConfiguration pwmHttpClientConfiguration = PwmHttpClientConfiguration.builder()
                         .trustManagerType( promiscuous ? PwmHttpClientConfiguration.TrustManagerType.promiscuous : PwmHttpClientConfiguration.TrustManagerType.defaultJava )
                         .build();
-                final PwmHttpClient client = pwmApplication.getHttpClientService().getPwmHttpClient( pwmHttpClientConfiguration );
+                final PwmHttpClient client = pwmApplication.getHttpClientService().getPwmHttpClient( pwmHttpClientConfiguration, pwmApplication.getSessionLabel() );
                 return client.streamForUrl( wordlistConfiguration.getAutoImportUrl() );
             }
 
-            try
+            if ( PwmURL.uriSchemeMatches( uri, PwmURL.Scheme.file ) )
             {
-                final URL url = new URL( importUrl );
-                return url.openStream();
+                try
+                {
+                    final URL url = URI.create( importUrl ).toURL();
+                    return url.openStream();
+                }
+                catch ( final IOException e )
+                {
+                    final String msg = "unable to open auto-import URL: " + e.getMessage();
+                    throw PwmUnrecoverableException.newException( PwmError.ERROR_WORDLIST_IMPORT_ERROR, msg );
+                }
             }
-            catch ( final IOException e )
-            {
-                final String msg = "unable to open auto-import URL: " + e.getMessage();
-                throw PwmUnrecoverableException.newException( PwmError.ERROR_WORDLIST_IMPORT_ERROR, msg );
-            }
+
+            throw new IllegalArgumentException( "can't auto-import protocol scheme '" + uri.getScheme() + "'" );
         }
         );
     }
@@ -163,12 +171,12 @@ class WordlistSource
     {
         final Instant startTime = Instant.now();
 
-        final PwmHttpClient pwmHttpClient = pwmApplication.getHttpClientService().getPwmHttpClient();
+        final PwmHttpClient pwmHttpClient = pwmApplication.getHttpClientService().getPwmHttpClient( pwmApplication.getSessionLabel() );
         final PwmHttpClientRequest request = PwmHttpClientRequest.builder()
                 .method( HttpMethod.HEAD )
                 .url( importUrl )
                 .build();
-        final PwmHttpClientResponse response = pwmHttpClient.makeRequest( request, null );
+        final PwmHttpClientResponse response = pwmHttpClient.makeRequest( request );
         final Map<HttpHeader, String> returnResponses = new EnumMap<>( HttpHeader.class );
         for ( final Map.Entry<String, String> entry : response.getHeaders().entrySet() )
         {
@@ -184,7 +192,7 @@ class WordlistSource
 
         final Map<HttpHeader, String> finalReturnResponses =  Collections.unmodifiableMap( returnResponses );
         pwmLogger.debug( sessionLabel, () -> "read remote header info for " + this.getWordlistSourceType() + " wordlist: "
-                + JsonUtil.serializeMap( finalReturnResponses ), () -> TimeDuration.fromCurrent( startTime ) );
+                + JsonFactory.get().serializeMap( finalReturnResponses ), TimeDuration.fromCurrent( startTime ) );
         return finalReturnResponses;
     }
 
@@ -247,11 +255,11 @@ class WordlistSource
         finally
         {
             closeStreams( pwmLogger, processId, sessionLabel, inputStream );
-            IOUtils.closeQuietly( zipInputStream );
+            JavaHelper.closeQuietly( zipInputStream );
         }
 
         bytes = zipInputStream.getByteCount();
-        hash = JavaHelper.byteArrayToHexString( zipInputStream.getHash() );
+        hash = JavaHelper.binaryArrayToHex( zipInputStream.getHash() );
         lines = zipInputStream.getLineCount();
 
         if ( cancelFlag.getAsBoolean() )
@@ -263,7 +271,7 @@ class WordlistSource
 
         pwmLogger.debug( sessionLabel, () -> processIdLabel( processId ) + "completed read of data for " + this.getWordlistSourceType()
                 + " wordlist " + StringUtil.formatDiskSizeforDebug( bytes )
-                + ", " + JsonUtil.serialize( wordlistSourceInfo )
+                + ", " + JsonFactory.get().serialize( wordlistSourceInfo )
                 + " (" + TimeDuration.compactFromCurrent( startTime ) + ")" );
 
         return wordlistSourceInfo;
@@ -286,7 +294,7 @@ class WordlistSource
                                 + getWordlistSourceType() + " wordlist"
                                 + " " + StringUtil.formatDiskSize( wordlistZipReader.getByteCount() ) + " read"
                                 + bytesPerSecondStr().orElse( "" ),
-                        () -> TimeDuration.fromCurrent( startTime ) );
+                        TimeDuration.fromCurrent( startTime ) );
             }
 
             private Optional<String> bytesPerSecondStr()
@@ -302,7 +310,7 @@ class WordlistSource
 
         return ConditionalTaskExecutor.forPeriodicTask(
                 logOutputter,
-                AbstractWordlist.DEBUG_OUTPUT_FREQUENCY );
+                AbstractWordlist.DEBUG_OUTPUT_FREQUENCY.asDuration() );
     }
 
     private void closeStreams(
@@ -315,10 +323,10 @@ class WordlistSource
         pwmLogger.trace( sessionLabel, () -> processIdLabel( processId ) + "beginning close of remote wordlist read process" );
         for ( final InputStream inputStream : inputStreams )
         {
-            IOUtils.closeQuietly( inputStream );
+            JavaHelper.closeQuietly( inputStream );
         }
         pwmLogger.trace( sessionLabel, () -> processIdLabel( processId ) + "completed close of remote wordlist read process",
-                () -> TimeDuration.fromCurrent( startClose ) );
+                TimeDuration.fromCurrent( startClose ) );
     }
 
     private String processIdLabel( final int processId )
